update lootbet down

--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -296,8 +296,8 @@
                     </div>
                   </a>
                 </div>
-                 <!-- betfury-promocode-->
-                 <div class="news-item">
+                <!-- betfury-promocode-->
+                <div class="news-item">
                   <a href="/News-Articles/Betfury-Promo-Code/">
                     <div class="news-banner">
                       <img
@@ -605,16 +605,14 @@
               </div>
 
               <div class="top top3">
-                <a
-                  href="https://lootclick.net/_HszlLf-Uqqkt5ET4DcCllGNd7ZgqdRLk/1/"
-                >
+                <a href="https://wildpartners.app/a55d1e542">
                   <div class="top-left nr3"><p class="n1">3</p></div>
                   <div class="img-box-top">
-                    <img src="/img/loot.bet-logo.webp" alt="loot.bet logo" />
+                    <img src="/img/wild-logo.webp" alt="BetFury logo" />
                   </div>
 
                   <div class="content-top">
-                    <p>First deposit bonus 100% up to 100€</p>
+                    <p>Welcome bonuses 350% + 200 free spins</p>
                   </div>
 
                   <div class="top-bonus">
@@ -889,140 +887,6 @@
                 <ul>
                   <li>Minimum Deposit:0.05 mBTC</li>
                   <li>Wagering: x40</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="bottom"></div>
-        </div>
-
-        <!-- loot.bet-->
-        <div class="main">
-          <div class="second">
-            <div class="casino-info">
-              <a class="roobet-infoLinks-box" href="/Reviews-page/Loot.bet/">
-                <div class="links-to-roobet-info">
-                  <div class="content-box">
-                    <div class="Image-box">
-                      <img
-                        class="casino-image"
-                        loading="lazy"
-                        src="/img/loot.bet-logo.webp"
-                        alt="Wild.io logo"
-                      />
-                    </div>
-                    <div class="name-buttons">
-                      <div class="name-holder">
-                        <p class="casino-name">Loot.Bet</p>
-                      </div>
-                      <div class="buttons-casino-info">
-                        <button class="best-rewards">Daly Quests</button>
-                        <button class="high-withdrawal">
-                          Weekly Promotions
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="casino-bonus">
-              <div class="bonus-info">
-                <p class="info">First deposit bonus 100% up to 100€</p>
-              </div>
-
-              <div class="buttons-bonus">
-                <a href="/Reviews-page/Loot.bet/"
-                  ><button class="inactive">Review</button></a
-                >
-
-                <a
-                  href="https://lootclick.net/_HszlLf-Uqqkt5ET4DcCllGNd7ZgqdRLk/1/"
-                >
-                  <button class="bonus-link">Claim bonus</button>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="more-info">
-            <button type="button" data-modal="#loot-bet-moreInfo">
-              more info
-            </button>
-          </div>
-
-          <div id="loot-bet-moreInfo" class="modal">
-            <div
-              type="button"
-              data-modal="#loot-bet-moreInfo"
-              class="modal-close"
-            ></div>
-            <div class="modal-content">
-              <button
-                type="button"
-                data-modal="#loot-bet-moreInfo"
-                class="modal-close"
-                id="close-insede-content"
-              >
-                &times;
-              </button>
-
-              <div class="deposit-methods">
-                <h2>Deposit Methods:</h2>
-                <div class="logo-methods">
-                  <img
-                    class="card-tipe"
-                    src="/img/visa-logo.webp"
-                    loading="lazy"
-                    alt="visa icon"
-                  />
-                  <img
-                    class="card-tipe"
-                    src="/img/visa-logo.webp"
-                    loading="lazy"
-                    alt="master card icon"
-                  />
-                  <img
-                    class="card-tipe"
-                    src="/img/skrill-logo.webp"
-                    loading="lazy"
-                    alt="skrill logo"
-                  />
-                  <img
-                    class="card-tipe tipe4"
-                    src="/img/AstroPay.webp"
-                    loading="lazy"
-                    alt="astropay icon"
-                  />
-                  <img
-                    class="card-tipe"
-                    src="/img/litecoin-logo.webp"
-                    loading="lazy"
-                    alt="litecoin logo"
-                  />
-                  <img
-                    class="card-tipe"
-                    src="/img/ethrtium-logo.webp"
-                    loading="lazy"
-                    alt="etherium logo"
-                  />
-                  <img
-                    class="card-tipe"
-                    src="/img/bit-coin-logo.webp"
-                    loading="lazy"
-                    alt="bitcoin logo"
-                  />
-                </div>
-              </div>
-
-              <div class="withdrawal">
-                <h2>Withdrawal Time :1 to 24 hours</h2>
-              </div>
-
-              <div class="bonus-terms">
-                <h2>Bonus Terms & Conditions</h2>
-                <ul>
-                  <li>Minimum Deposit: €10</li>
-                  <li>Wagering:20x</li>
                 </ul>
               </div>
             </div>
