--- a/Reviews-page/Wild.io/index.html
+++ b/Reviews-page/Wild.io/index.html
@@ -30,7 +30,7 @@
 
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
 
-    <title>Wild.io Casino Review 2025 - WB 350% + 200 FS and more!</title>
+    <title>Wild io Casino Review 2025 - WB 350% + 200 FS and more!</title>
 
     <script type="application/ld+json">
       {
