--- a/Reviews-page/BC.Games/index.html
+++ b/Reviews-page/BC.Games/index.html
@@ -29,7 +29,7 @@
     />
     <link rel="stylesheet" rel="preload" href="/reviews.css" as="style" />
     <title>
-      BC.Game Casino Review 2025: Crypto Casino with 100% WB, 400FS and more!
+      BC Game Casino Review 2025: Crypto Casino with 100% WB, 400FS and more!
     </title>
     <!-- breadcrumbs -->
     <script type="application/ld+json">
