--- a/Reviews-page/Loot.bet/index.html
+++ b/Reviews-page/Loot.bet/index.html
@@ -221,13 +221,7 @@
   -->
     <section class="casino-allInfo">
       <div class="casino-banner">
-        <a
-          href="https://lootclick.net/_HszlLf-Uqqkt5ET4DcCllGNd7ZgqdRLk/1/"
-          aria-label="Read more about Roobet"
-          ><img
-            src="/img/news-banners/loot.bet-banner.webp"
-            alt="roobet banner"
-        /></a>
+        <img src="/img/news-banners/loot.bet-banner.webp" alt="roobet banner" />
       </div>
 
       <div class="casino-infoLogo">
@@ -235,13 +229,13 @@
           <img src="/img/loot.bet-logo.webp" loading="lazy" alt="roobet logo" />
         </div>
       </div>
-      <div class="play-now">
+      <!-- <div class="play-now">
         <a
           href="https://lootclick.net/_HszlLf-Uqqkt5ET4DcCllGNd7ZgqdRLk/1/"
           aria-label="Read more about Roobet"
           ><button>Play Now</button></a
         >
-      </div>
+      </div> -->
 
       <div class="tab-info">
         <button class="tablinks" onclick="openTab(event, 'Overview')">
