--- a/Sports/index.html
+++ b/Sports/index.html
@@ -303,6 +303,31 @@
                   </a>
                 </div>
 
+                <!-- roobet march sportsbook promos-->
+                <div class="news-item">
+                  <a href="/News-Articles/Roobet-March-Sportsbook-Promos/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/roobet-march-sports.webp"
+                        width="300"
+                        height="200"
+                        alt="Mission Uncrossable Banner"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        A Month of Wins in Sports Betting & Crypto Casino!
+                        <br />
+                        <strong>Offer expires on Apr 7th 2025</strong>
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!--ggbet tenis bonuses fec 2025-->
                 <div class="news-item">
                   <a
