--- a/index.html
+++ b/index.html
@@ -274,6 +274,28 @@
                     </div>
                   </a>
                 </div>
+                
+                <!-- roobet march sportsbook promos-->
+            <div class="news-item">
+              <a href="/News-Articles/Roobet-March-Sportsbook-Promos/">
+                <div class="news-banner">
+                  <img
+                    src="/img/news-banners/roobet-march-sports.webp"
+                    width="300"
+                    height="200"
+                    alt="Mission Uncrossable Banner"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="news-content">
+                  <h2>A Month of Wins in Sports Betting & Crypto Casino! <br>
+                  <strong>Offer expires on Apr 7th 2025</strong></h2>
+                  <div class="news-button">
+                    <button>Read More</button>
+                  </div>
+                </div>
+              </a>
+            </div>
                  <!-- roobet lucky month-->
             <div class="news-item">
               <a href="/News-Articles/Roobet-Luck-Month-Kicks-Off/">
