--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -296,6 +296,32 @@
                     </div>
                   </a>
                 </div>
+                <!-- tada gift code-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/Bc.Game-TaDa-Weekly-Gift-Code-30-Free-Spins/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/bcgame-data-fortune.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        TaDa’s Weekly Gift Code Giveaway – 30 Free Spins! <br />
+                        <strong> Offer expires on April 29th 2025</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
                 <!-- betfury-promocode-->
                 <div class="news-item">
                   <a href="/News-Articles/Betfury-Promo-Code/">
