--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -296,6 +296,34 @@
                     </div>
                   </a>
                 </div>
+                <!-- play to win tournament-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/Bc.Game-Spadegaming-PLAY-WIN-Tournament/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/Bc.Game-Spadegaming-PLAY-WIN-Tournament-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Spadegaming PLAY WIN Tournament - Win a Share of
+                        $570,700!
+                        <br />
+                        <strong> Offer expires on 26th of May 2025</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
                 <!-- tada gift code-->
                 <div class="news-item">
                   <a
