--- a/index.html
+++ b/index.html
@@ -274,6 +274,31 @@
                     </div>
                   </a>
                 </div>
+
+                <!-- UEFA Champions League Stake Back Challenge-->
+            <div class="news-item">
+              <a
+                href="/News-Articles/Bc.Game-UEFA-Champions-League-Stake-Back-Challenge/"
+              >
+                <div class="news-banner">
+                  <img
+                    src="/img/news-banners/Bc.Game-UEFA-Champions-League-Stake-Back-Challenge-news.webp"
+                    width="300"
+                    height="200"
+                    alt="ggbet-esl-bangkok-news"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="news-content">
+                  <h2>Get Up to 10% Weekly Stake Back! <br>
+                  <strong> Offer expires on 1st of June 2025</strong></h2>
+
+                  <div class="news-button">
+                    <button>Read More</button>
+                  </div>
+                </div>
+              </a>
+            </div>
                 <!-- play to win tournament-->
             <div class="news-item">
               <a href="/News-Articles/Bc.Game-Spadegaming-PLAY-WIN-Tournament/">
