--- a/index.html
+++ b/index.html
@@ -253,6 +253,31 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+                 
+                
+                <!-- lotery-->
+            <div class="news-item">
+              <a href="/News-Articles/BC.GAME-Welcome-Lottery/">
+                <div class="news-banner">
+                  <img
+                    src="/img/news-banners/Bc.Game-loto-news.webp"
+                    width="300"
+                    height="200"
+                    alt="ggbet-esl-bangkok-news"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="news-content">
+                  <h2> BC.GAME Welcome Lottery – Unlock Your Exclusive Promo Code for a
+                    Chance to Win $100,000!<br>
+                  <p> Offer expires on 1st of January 2026</p></h2>
+
+                  <div class="news-button">
+                    <button>Read More</button>
+                  </div>
+                </div>
+              </a>
+            </div>
 
                 <!-- mission uncrossable -->
                 <div class="news-item">
