--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -1498,7 +1498,7 @@
             </div>
             <div class="casino-bonus">
               <div class="bonus-info">
-                <p class="info">Welcome Bonus 325% up to 10800 CAD + 250 FS</p>
+                <p class="info">Welcome Bonus 325% up to 10800$ + 250 FS</p>
               </div>
 
               <div class="buttons-bonus">
