--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -246,15 +246,18 @@
           />
           <div class="content-text">
             <h1>
-              Unlock the top free spins bonus and welcome bonuses from the best
+              Unlock the top free spins and welcome bonus offers from the best
               online casinos in 2025!
             </h1>
 
             <p>
               Here, at <a href="/">ALL4WINS</a> , we have conducted a thorough
-              review of many FS & WB Offers from the best online casino sites
-              out there. All in the pursuit of helping you to find the online
-              casino site for your needs.
+              review of many free spins & welcome bonus offers from the best
+              online casino sites .
+            </p>
+            <p>
+              All in the pursuit of helping you to find the online casino site
+              for your needs.
             </p>
 
             <p>Explore, compare, and start your winning journey today!</p>
@@ -276,29 +279,31 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
-                 <!-- lotery-->
-            <div class="news-item">
-              <a href="/News-Articles/BC.GAME-Welcome-Lottery/">
-                <div class="news-banner">
-                  <img
-                    src="/img/news-banners/Bc.Game-loto-news.webp"
-                    width="300"
-                    height="200"
-                    alt="ggbet-esl-bangkok-news"
-                    loading="lazy"
-                  />
-                </div>
-                <div class="news-content">
-                  <h2> BC.GAME Welcome Lottery – Unlock Your Exclusive Promo Code for a
-                    Chance to Win $100,000!<br>
-                  <p> Offer expires on 1st of January 2026</p></h2>
+                <!-- lotery-->
+                <div class="news-item">
+                  <a href="/News-Articles/BC.GAME-Welcome-Lottery/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/Bc.Game-loto-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        BC.GAME Welcome Lottery – Unlock Your Exclusive Promo
+                        Code for a Chance to Win $100,000!<br />
+                        <p>Offer expires on 1st of January 2026</p>
+                      </h2>
 
-                  <div class="news-button">
-                    <button>Read More</button>
-                  </div>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
                 </div>
-              </a>
-            </div>
 
                 <!-- mission uncrossable -->
                 <div class="news-item">
