--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -240,6 +240,7 @@
           <img
             class="poker-cards-casino"
             src="/img/news-banners/slot-machine-main.webp"
+            loading="lazy"
             width="300"
             height="200"
             alt="poker cards"
@@ -268,6 +269,7 @@
           <img
             class="slots-news-casino"
             src="/img/news-banners/poker-chips-casino.webp"
+            loading="lazy"
             width="300"
             height="200"
             alt="slots"
@@ -608,6 +610,7 @@
           <img
             class="roulette-top3-casino"
             src="/img/news-banners/poker-cards-casino.webp"
+            loading="lazy"
             width="300"
             height="200"
             alt="roulette"
@@ -688,6 +691,7 @@
         <div class="casino-main">
           <img
             src="/img/news-banners/jackpot-casino.webp"
+            loading="lazy"
             width="300"
             height="200"
             alt="slot machine"
