--- a/Esports/index.html
+++ b/Esports/index.html
@@ -239,6 +239,7 @@
           <img
             class="content-img"
             src="/img/news-banners/jinx-lol.webp"
+            loading="lazy"
             width="300"
             height="200"
             alt="jinx"
@@ -270,6 +271,7 @@
           <img
             class="top-right-image"
             src="/img/news-banners/lol-brown.webp"
+            loading="lazy"
             width="300"
             height="200"
             alt="Promotional Image"
@@ -387,6 +389,9 @@
           <img
             class="top3img"
             src="/img/news-banners/Blitzcrank-lol.webp"
+            loading="lazy"
+            width="300"
+            height="200"
             alt="Blitzcrank"
           />
           <div class="top3casinos">
