--- a/Sports/index.html
+++ b/Sports/index.html
@@ -236,6 +236,7 @@
           <img
             class="content-sports"
             src="/img/news-banners/Charles-Oliveira-sports.webp"
+            loading="lazy"
             width="300"
             height="200"
             alt="Charles-Oliveira"
@@ -269,6 +270,7 @@
           <img
             class="news-sports-img"
             src="/img/news-banners/tenis-news.webp"
+            loading="lazy"
             width="300"
             height="200"
             alt="boxing"
@@ -569,6 +571,7 @@
           <img
             class="top3-spors-img"
             src="/img/news-banners/football-sports.webp"
+            loading="lazy"
             width="300"
             height="200"
             alt="football"
