--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
           <img
             class="poker-cards-casino"
             src="/img/news-banners/slot-machine-main.webp"
+            loading="lazy"
             width="300"
             height="200"
             rel="preload"
@@ -244,6 +245,9 @@
           <img
             class="news-sports-img"
             src="/img/news-banners/tenis-news.webp"
+            loading="lazy"
+            width="300"
+            height="200"
             alt="boxing"
           />
           <div class="news-slider">
@@ -591,6 +595,7 @@
           <img
             class="top3img"
             src="/img/news-banners/Blitzcrank-lol.webp"
+            loading="lazy"
             width="300"
             height="200"
             alt="Blitzcrank"
@@ -675,6 +680,7 @@
         <div class="casino-main">
           <img
             src="/img/news-banners/jackpot-casino.webp"
+            loading="lazy"
             width="300"
             height="200"
             alt="slot machine"
