--- a/Esports/index.html
+++ b/Esports/index.html
@@ -246,8 +246,8 @@
           />
           <div class="content-text">
             <h1>
-              Best Esports betting sites with free bests offers and generous
-              welcome bonuses !
+              Best Esports betting sites with free bests and generous welcome
+              bonuses !
             </h1>
 
             <p>
