--- a/Sports/index.html
+++ b/Sports/index.html
@@ -242,9 +242,7 @@
             alt="Charles-Oliveira"
           />
           <div class="content-text">
-            <h1>
-              Best Sports Betting Websites, Sportsbook Promos & Bonus Bets!
-            </h1>
+            <h1>Best Sports Betting Websites, Promos & Bonus Bets!</h1>
             <p>
               Here, at <a href="/">ALL4WINS</a> , we have conducted a thorough
               review of many of the best sportbooks out there.
