--- a/index.html
+++ b/index.html
@@ -224,10 +224,7 @@
             alt="poker cards"
           />
           <div class="content-text">
-            <h1>
-              Top Casino, Sports & Esports Betting With Free Spins, Free Bets
-              and Generous Welcome Bonus Offers!
-            </h1>
+            <h1>Top Casinos, Sports & Esports Betting !</h1>
 
             <p>
               Here, at ALL4WINS, we have conducted a thorough review of many of
