--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -246,10 +246,7 @@
             alt="poker cards"
           />
           <div class="content-text">
-            <h1>
-              Unlock the top free spins and welcome bonus offers from the best
-              online casinos in 2025!
-            </h1>
+            <h1>Unlock the top free spins and welcome bonus offers !</h1>
 
             <p>
               Here, at <a href="/">ALL4WINS</a> , we have conducted a thorough
