--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -278,6 +278,34 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                <!-- roobet easter promotions 2025-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/Roobet-Exciting-Easter-Casino-Promotions/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/roobet-easter-news.webp"
+                        width="300"
+                        height="200"
+                        alt="Mission Uncrossable Banner"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Celebrate Easter with Roobet’s Exciting Casino
+                        Promotions! <br />
+
+                        <strong>Offer expires on Apr 20th 2025</strong>
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!-- lotery-->
                 <div class="news-item">
                   <a href="/News-Articles/BC.GAME-Welcome-Lottery/">
