--- a/Sports/index.html
+++ b/Sports/index.html
@@ -280,6 +280,33 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+                <!-- roobet sports april 2025-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/Roobet-April-Sports-Betting-Promotions/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/Roobet-April-Sports-Betting-Promotions-news.webp"
+                        width="300"
+                        height="200"
+                        alt="Mission Uncrossable Banner"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Score Big with Roobet – April Sports Betting Promotions!
+                        <br />
+
+                        <strong>Offer expires on May 25th 2025</strong>
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
 
                 <!-- lotery-->
                 <div class="news-item">
