--- a/index.html
+++ b/index.html
@@ -254,6 +254,32 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                <!-- roobet mad muertos-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/Roobet-Exclusive-Mad-Muertos-is-Here/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/roobet-Mad-Muertos-news.webp"
+                        width="300"
+                        height="200"
+                        alt="Mission Uncrossable Banner"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Mad Muertos is Here – Exclusive to Roobet <br />
+                        <strong>Offer ongoing</strong>
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!-- roobet easter promotions 2025-->
                 <div class="news-item">
                   <a
