--- a/Esports/index.html
+++ b/Esports/index.html
@@ -283,6 +283,35 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                <!--ggbet lpl-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/GG.Bet-Bet-on-LPL-Split-2-with-Cashback-Offers/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/ggbet-LpL-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Experience LPL Split 2 with Exclusive Cashback – Only on
+                        GG.Bet
+                        <br />
+                        <strong>Offer expires on April 30th 2025</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!-- lotery-->
                 <div class="news-item">
                   <a href="/News-Articles/BC.GAME-Welcome-Lottery/">
