--- a/index.html
+++ b/index.html
@@ -254,6 +254,32 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                <!-- roobet may 2025-->
+                <div class="news-item">
+                  <a href="/News-Articles/Roobet-1000000-in-prizes/">
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/roobet-may-news.webp"
+                        width="300"
+                        height="200"
+                        alt="Mission Uncrossable Banner"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Roobet Casino Heats Up May with Over $1,000,000 in
+                        Online Casino Bonuses <br />
+
+                        <strong>Offer expires on May 31st 2025</strong>
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!-- roobet mad muertos-->
                 <div class="news-item">
                   <a
@@ -272,34 +298,6 @@
                       <h2>
                         Mad Muertos is Here – Exclusive to Roobet <br />
                         <strong>Offer ongoing</strong>
-                      </h2>
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-
-                <!-- roobet easter promotions 2025-->
-                <div class="news-item">
-                  <a
-                    href="/News-Articles/Roobet-Exciting-Easter-Casino-Promotions/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/roobet-easter-news.webp"
-                        width="300"
-                        height="200"
-                        alt="Mission Uncrossable Banner"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        Celebrate Easter with Roobet’s Exciting Casino
-                        Promotions! <br />
-
-                        <strong>Offer expires on Apr 20th 2025</strong>
                       </h2>
                       <div class="news-button">
                         <button>Read More</button>
@@ -401,32 +399,6 @@
                         $570,700!
                         <br />
                         <strong> Offer expires on 26th of May 2025</strong>
-                      </h2>
-
-                      <div class="news-button">
-                        <button>Read More</button>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-                <!-- tada gift code-->
-                <div class="news-item">
-                  <a
-                    href="/News-Articles/Bc.Game-TaDa-Weekly-Gift-Code-30-Free-Spins/"
-                  >
-                    <div class="news-banner">
-                      <img
-                        src="/img/news-banners/bcgame-data-fortune.webp"
-                        width="300"
-                        height="200"
-                        alt="ggbet-esl-bangkok-news"
-                        loading="lazy"
-                      />
-                    </div>
-                    <div class="news-content">
-                      <h2>
-                        TaDa’s Weekly Gift Code Giveaway – 30 Free Spins! <br />
-                        <strong> Offer expires on April 29th 2025</strong>
                       </h2>
 
                       <div class="news-button">
