--- a/Sports/index.html
+++ b/Sports/index.html
@@ -280,6 +280,32 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+                <!-- bcgame f1 2025-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/BCGame_Double_Speed_Refund_F1_GP_Betting_Offer/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/bc.game_f1_news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Double Speed Refund: Bet on F1 and Win Even More <br />
+                        <strong> Offer expires on December 7th, 2025</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
 
                 <!-- lotery-->
                 <div class="news-item">
