--- a/index.html
+++ b/index.html
@@ -253,6 +253,36 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+
+                <!-- bcgame toutnament play to win -->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/BCGame_Spadegaming_Tournament_570,700_Dolars_in_Prizes/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/bcgame-tournament-playandwin-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Spin & Win Big: BC.Game’s $570,700 Spadegaming
+                        Tournament Is Live <br />
+
+                        <strong> Offer expires on August 25th, 2025</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!-- bcgame ufc ko 2025-->
                 <div class="news-item">
                   <a
@@ -279,6 +309,7 @@
                     </div>
                   </a>
                 </div>
+
                 <!-- bcgame f1 2025-->
                 <div class="news-item">
                   <a
