--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -278,6 +278,33 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                <!-- bcgame fishing toutnament play to win -->
+            <div class="news-item">
+              <a
+                href="/News-Articles/BCGame_Fishing_Frenzy_Tournament _570,700_Dolars_Prize_Pool/"
+              >
+                <div class="news-banner">
+                  <img
+                    src="/img/news-banners/bcgame-fighing-tournament-news.webp"
+                    width="300"
+                    height="200"
+                    alt="ggbet-esl-bangkok-news"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="news-content">
+                  <h2>
+                    🎣 BC.Game Fishing Frenzy Tournament – $570,700 Prize Pool <br>
+                  
+                 <strong> Offer expires on August 25th, 2025</strong><h2>
+
+                  <div class="news-button">
+                    <button>Read More</button>
+                  </div>
+                </div>
+              </a>
+            </div>
+
                 <!-- bcgame toutnament play to win -->
                 <div class="news-item">
                   <a
