--- a/Esports/index.html
+++ b/Esports/index.html
@@ -283,6 +283,34 @@
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
 
+                <!-- thunderpick-lol-bet-2025 -->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/Thunderpick_LoL_Spring_Season_2025_EarnUp_to_20_Euro_in_Cash_Bonuses/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/thunderpick-lol-bet-news.webp"
+                        width="300"
+                        height="200"
+                        alt="Plinko banner"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Thunderpick LoL Spring 2025: Earn Up to €20 in Weekly
+                        Cash Bonuses <br />
+
+                        <strong> Promotion ended</strong>
+                      </h2>
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
                 <!--ggbet lol may 2025-->
                 <div class="news-item">
                   <a href="/News-Articles/GGBet-League-Of-Legends-200-Bonus/">
