--- a/News-Articles/Thunderpick_LoL_Spring_Season_2025_Earn_Up_to_20_Euro_in_Cash_Bonuses/index.html
+++ b/News-Articles/Thunderpick_LoL_Spring_Season_2025_Earn_Up_to_20_Euro_in_Cash_Bonuses/index.html
@@ -248,7 +248,7 @@
         </a>
         <div class="news-content-main">
           <h1>
-            Thunderpick LoL Spring Season 2025: Earn Up to €20 in Cash Bonuses
+            Thunderpick LoL Spring Season 2025 - Earn Up to €20 in Cash Bonuses
           </h1>
           <div class="claim-news-bonus">
             <a
