new duelbits promo

--- a/Casinos/index.html
+++ b/Casinos/index.html
@@ -277,6 +277,34 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+                 
+                <!--duelbits drops 2025-->
+            <div class="news-item">
+              <a
+                href="/News-Articles/BGaming_Drops_Frenzy_Fest_at_Duelbits_Win_From_150,000_Dolars_in_Random_Prize_Drops/"
+              >
+                <div class="news-banner">
+                  <img
+                    src="/img/news-banners/duelbits-drops-2025-news.webp"
+                    width="300"
+                    height="200"
+                    alt="ggbet-esl-bangkok-news"
+                    loading="lazy"
+                  />
+                </div>
+                <div class="news-content">
+                  <h2>
+                    BGaming Drops Frenzy Fest at Duelbits – Win Your Share of
+                    $150,000 in Random Drops <br>
+                  
+                  <strong> Offer expires on December 31st, 2025 </strong></h2>
+
+                  <div class="news-button">
+                    <button>Read More</button>
+                  </div>
+                </div>
+              </a>
+            </div>
 
                 <!-- bcgame fishing toutnament play to win -->
             <div class="news-item">
