sports new promo

--- a/Sports/index.html
+++ b/Sports/index.html
@@ -280,6 +280,35 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+
+                <!--duelbits nba 2025-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/Duelbits_NBA_Playoffs_Promo_2025_Win_100_Dolars_Free_Bet_token/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/duelbits-nba-promo-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        Duelbits NBA Playoffs Promo 2025: Win Free Bet token up
+                        to $100 If Your Team Scores 115+ Points
+                        <br />
+                        <strong> Offer expires on June 13th, 2025</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
                 <!-- bcgame ufc ko 2025-->
                 <div class="news-item">
                   <a
